...
            modifier = Modifier
                .fillMaxSize()
                .verticalScroll(rememberScrollState())
        ) {

            Text(
                "Booking Summary",
                color = Color.White,
                fontSize = 22.sp,
                fontWeight = FontWeight.Bold
            )

            Spacer(Modifier.height(20.dp))
...
                    .height(55.dp)
                    .padding(horizontal = 2.dp),
                colors = ButtonDefaults.buttonColors(
                    containerColor = Color(0xFFD32F2F)
                )
            ) {
                Text("Proceed to Payment", color = Color.White, fontSize = 16.sp)
            }

            Spacer(Modifier.height(10.dp))

            TextButton(onClick = onBack) {
                Text("Back", color = Color.White)
...
