...
                }
            }
        ) {
            if (viewModel.isLoading.value)
                CircularProgressIndicator(Modifier.size(18.dp))
            else
                Text("Pagar")
        }
    }
}

